Fixed profile page flicker, will add a new profile page later. close #23

--- a/client/views/profile/profile.css
+++ b/client/views/profile/profile.css
@@ -1,4 +1,3 @@
 #profile {
 	padding-top:40px;
-	opacity:0;
 }
